8276774: Cookie stored in CookieHandler not sent if user headers contain cookie